feat: add concurrency to github action

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,5 +1,10 @@
 name: Build and Push Docker Image
 
+# Concurrency group scoped to the workflow run. The last run will cancel any in-progress job.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ main ]
